--- a/src/PowerShellEditorServices.Host/PowerShellEditorServices.Host.nuspec
+++ b/src/PowerShellEditorServices.Host/PowerShellEditorServices.Host.nuspec
@@ -3,14 +3,20 @@
   <metadata>
     <id>$id$</id>
     <version>$version$</version>
-    <title>Windows PowerShell Editor Services - Host Process</title>
+    <title>PowerShell Editor Services Host Process</title>
     <authors>$author$</authors>
     <owners>$author$</owners>
     <licenseUrl>https://raw.githubusercontent.com/PowerShell/PowerShellEditorServices/master/LICENSE</licenseUrl>
-    <projectUrl>http://github.com/PowerShell/PowerShellEditorServices</projectUrl>
+    <projectUrl>https://github.com/PowerShell/PowerShellEditorServices</projectUrl>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
     <description>$description$</description>
-    <copyright>© Microsoft Corporation. All rights reserved.</copyright>
-    <tags>Microsoft Windows PowerShell editor</tags>
-  </metadata>
+    <copyright>Â© Microsoft Corporation. All rights reserved.</copyright>
+    <tags>PowerShell editor development language debugging</tags>
+    <dependencies> 
+      <group>
+        <dependency id="Microsoft.PowerShell.EditorServices" version="$version$" />
+        <dependency id="Microsoft.PowerShell.EditorServices.Protocol" version="$version$" />      
+      </group>
+    </dependencies>      
+  </metadata>  
 </package>
