--- a/PowerShellEditorServices.Host.Iis/PowerShellEditorServices.Host.Iis.csproj
+++ b/PowerShellEditorServices.Host.Iis/PowerShellEditorServices.Host.Iis.csproj
@@ -99,6 +99,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\src\PowerShellEditorServices.Protocol\PowerShellEditorServices.Protocol.csproj">
