--- a/src/PowerShellEditorServices.Channel.WebSocket/PowerShellEditorServices.Channel.WebSocket.csproj
+++ b/src/PowerShellEditorServices.Channel.WebSocket/PowerShellEditorServices.Channel.WebSocket.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{A6663F64-3C3D-461F-8A05-0CC4CA7A9945}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PowerShellEditorServices.Channel.WebSocket</RootNamespace>
-    <AssemblyName>PowerShellEditorServices.Channel.WebSocket</AssemblyName>
+    <RootNamespace>Microsoft.PowerShell.EditorServices.Channel.WebSocket</RootNamespace>
+    <AssemblyName>Microsoft.PowerShell.EditorServices.Channel.WebSocket</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
