Fixing test assembly\namespace.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -42,4 +42,4 @@ test:
   - Microsoft.PowerShell.EditorServices.Test.dll
   - Microsoft.PowerShell.EditorServices.Test.Protocol.dll
   - Microsoft.PowerShell.EditorServices.Test.Host.dll
-  - Microsoft.PowerShell.EditorServices.Channel.WebSockets.Test.dll
+  - Microsoft.PowerShell.EditorServices.Test.Channel.WebSockets.dll
