Add text input prompt support
This change adds a PSHostUserInterface implementation for both the Prompt
and ReadLine methods so that input can be requested from the user.  The
implementation is made with the IPromptHandler interface so that the
prompt handling strategy can be changed based on the context of the
user's session.

--- a/test/PowerShellEditorServices.Test/PowerShellEditorServices.Test.csproj
+++ b/test/PowerShellEditorServices.Test/PowerShellEditorServices.Test.csproj
@@ -63,6 +63,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Console\InputPromptHandlerTests.cs" />
     <Compile Include="Session\PowerShellContextTests.cs" />
     <Compile Include="Debugging\DebugServiceTests.cs" />
     <Compile Include="Language\LanguageServiceTests.cs" />
