--- a/test/PowerShellEditorServices.Test.Host/PowerShellEditorServices.Test.Host.csproj
+++ b/test/PowerShellEditorServices.Test.Host/PowerShellEditorServices.Test.Host.csproj
@@ -80,6 +80,7 @@
     <Compile Include="DebugAdapterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="LanguageServerTests.cs" />
+    <Compile Include="ServerTestsBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
