Changes to be committed: new file:   src/PowerShellEditorServices.Protocol/LanguageServer/FindModuleRequest.cs new file:   src/PowerShellEditorServices.Protocol/LanguageServer/InstallModuleRequest.cs modified:   src/PowerShellEditorServices.Protocol/PowerShellEditorServices.Protocol.csproj modified:   src/PowerShellEditorServices.Protocol/Server/LanguageServer.cs

--- a/src/PowerShellEditorServices.Protocol/PowerShellEditorServices.Protocol.csproj
+++ b/src/PowerShellEditorServices.Protocol/PowerShellEditorServices.Protocol.csproj
@@ -52,6 +52,8 @@
     <Compile Include="DebugAdapter\AttachRequest.cs" />
     <Compile Include="DebugAdapter\Breakpoint.cs" />
     <Compile Include="DebugAdapter\ContinueRequest.cs" />
+    <Compile Include="LanguageServer\FindModuleRequest.cs" />
+    <Compile Include="LanguageServer\InstallModuleRequest.cs" />
     <Compile Include="Messages\PromptEvents.cs" />
     <Compile Include="Server\DebugAdapter.cs" />
     <Compile Include="Server\DebugAdapterBase.cs" />
