PSES side changes for issue #96 - support x86/x64 debugging.
Besides **all** the awesome work @adamdriscoll did to enable this; there are some changes that need to be made to package.json in the vscode repo.  In order to support those changes, we need a different filename for the x86 batch file that launches the x86 debug host.

--- a/src/PowerShellEditorServices.Host.x86/PowerShellEditorServices.Host.x86.csproj
+++ b/src/PowerShellEditorServices.Host.x86/PowerShellEditorServices.Host.x86.csproj
@@ -53,7 +53,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Microsoft.PowerShell.EditorServices.Host.DebugAdapter.cmd">
+    <Content Include="Microsoft.PowerShell.EditorServices.Host.DebugAdapter.x86.cmd">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <None Include="..\PowerShellEditorServices.Host\App.config">
