Allow requests to be sent from server to client
This change enables a server to send requests to a client and wait for a
response.  This is a new capability that has been added to the
vscode-languageclient library which we'll start taking advantage of for
sending prompt requests to the UI.

--- a/src/PowerShellEditorServices.Protocol/PowerShellEditorServices.Protocol.csproj
+++ b/src/PowerShellEditorServices.Protocol/PowerShellEditorServices.Protocol.csproj
@@ -48,12 +48,13 @@
     <Reference Include="System.Management.Automation" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Client\ProtocolClient.cs" />
     <Compile Include="DebugAdapter\AttachRequest.cs" />
     <Compile Include="DebugAdapter\Breakpoint.cs" />
     <Compile Include="DebugAdapter\ContinueRequest.cs" />
     <Compile Include="LanguageServer\FindModuleRequest.cs" />
     <Compile Include="LanguageServer\InstallModuleRequest.cs" />
+    <Compile Include="MessageProtocol\IMessageSender.cs" />
+    <Compile Include="MessageProtocol\ProtocolEndpoint.cs" />
     <Compile Include="Messages\PromptEvents.cs" />
     <Compile Include="Server\DebugAdapter.cs" />
     <Compile Include="Server\DebugAdapterBase.cs" />
@@ -92,7 +93,6 @@
     <Compile Include="LanguageServer\ExpandAliasRequest.cs" />
     <Compile Include="LanguageServer\Hover.cs" />
     <Compile Include="Client\LanguageClientBase.cs" />
-    <Compile Include="Server\IEventWriter.cs" />
     <Compile Include="Server\LanguageServer.cs" />
     <Compile Include="Server\LanguageServerBase.cs" />
     <Compile Include="LanguageServer\ShowOnlineHelpRequest.cs" />
@@ -125,7 +125,6 @@
     <Compile Include="LanguageServer\References.cs" />
     <Compile Include="Server\LanguageServerSettings.cs" />
     <Compile Include="Server\PromptHandlers.cs" />
-    <Compile Include="Server\ProtocolServer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
