Add improved prompt cancellation handling
This change improves the current handling of PSHostUserInterface prompt
cancellation so that cancelled prompts are cleaned up effectively and
don't block further command execution.

--- a/src/PowerShellEditorServices/PowerShellEditorServices.csproj
+++ b/src/PowerShellEditorServices/PowerShellEditorServices.csproj
@@ -57,8 +57,8 @@
     <Compile Include="Console\ConsoleService.cs" />
     <Compile Include="Console\FieldDetails.cs" />
     <Compile Include="Console\InputPromptHandler.cs" />
-    <Compile Include="Console\IPromptHandler.cs" />
     <Compile Include="Console\IPromptHandlerContext.cs" />
+    <Compile Include="Console\PromptHandler.cs" />
     <Compile Include="Debugging\BreakpointDetails.cs" />
     <Compile Include="Debugging\DebugService.cs" />
     <Compile Include="Debugging\StackFrameDetails.cs" />
