Add intervallic buffering of OutputEvent messages
This change introduces a new AsyncDebouncer class which is able to gate
invocation requests to only occur after a specified interval.  This class
is used to implement an OutputDebouncer which takes all output messages
written from the PowerShell host and buffers them.  This causes many lines
of output written in a short time window to be sent as one OutputEvent
rather than writing individual events for each line.

Resolves #113.

--- a/src/PowerShellEditorServices.Protocol/PowerShellEditorServices.Protocol.csproj
+++ b/src/PowerShellEditorServices.Protocol/PowerShellEditorServices.Protocol.csproj
@@ -124,6 +124,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="LanguageServer\References.cs" />
     <Compile Include="Server\LanguageServerSettings.cs" />
+    <Compile Include="Server\OutputDebouncer.cs" />
     <Compile Include="Server\PromptHandlers.cs" />
   </ItemGroup>
   <ItemGroup>
