--- a/test/PowerShellEditorServices.Test.Protocol/PowerShellEditorServices.Test.Protocol.csproj
+++ b/test/PowerShellEditorServices.Test.Protocol/PowerShellEditorServices.Test.Protocol.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Message\MessageReaderWriterTests.cs" />
     <Compile Include="Message\TestMessageTypes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Server\OutputDebouncerTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
