Enable support for PowerShell v3 and v4
This change finishes our PowerShell v3 and v4 support by conditionally
changing behavior for those versions.  This works by using an interface
facade in front of any version-specific behavior so that the CLR doesn't
try to resolve method names that aren't available in a particular version.

Resolves #73.

--- a/src/PowerShellEditorServices/PowerShellEditorServices.csproj
+++ b/src/PowerShellEditorServices/PowerShellEditorServices.csproj
@@ -98,8 +98,12 @@
     <Compile Include="Console\ChoiceDetails.cs" />
     <Compile Include="Session\EditorSession.cs" />
     <Compile Include="Console\IConsoleHost.cs" />
+    <Compile Include="Session\IVersionSpecificOperations.cs" />
     <Compile Include="Session\OutputType.cs" />
     <Compile Include="Session\OutputWrittenEventArgs.cs" />
+    <Compile Include="Session\PowerShell3Operations.cs" />
+    <Compile Include="Session\PowerShell4Operations.cs" />
+    <Compile Include="Session\PowerShell5Operations.cs" />
     <Compile Include="Session\PowerShellExecutionResult.cs" />
     <Compile Include="Session\PowerShellContext.cs" />
     <Compile Include="Session\PowerShellContextState.cs" />
