Use corflags.exe to generate x86 host process
This change removes the existing PowerShellEditorServices.Host.x86 project
in favor of using the corflags.exe tool to set the 32-bit flag on the
AnyCPU build of the host process to generate the x86 variant.  This will
save some configuration duplication and make x86 host development builds
easier to test from editors like Visual Studio Code.

Resolves #185.

--- a/src/PowerShellEditorServices.Host/PowerShellEditorServices.Host.csproj
+++ b/src/PowerShellEditorServices.Host/PowerShellEditorServices.Host.csproj
@@ -82,6 +82,13 @@
     </PropertyGroup>
     <Error Condition="!Exists('$(SolutionDir)\.nuget\NuGet.targets')" Text="$([System.String]::Format('$(ErrorText)', '$(SolutionDir)\.nuget\NuGet.targets'))" />
   </Target>
+  <PropertyGroup>
+    <PostBuildEvent>
+      copy /y "$(ProjectDir)bin\$(Configuration)\Microsoft.PowerShell.EditorServices.Host.exe" "$(ProjectDir)bin\$(Configuration)\Microsoft.PowerShell.EditorServices.Host.x86.exe"
+      copy /y "$(ProjectDir)bin\$(Configuration)\Microsoft.PowerShell.EditorServices.Host.exe.config" "$(ProjectDir)bin\$(Configuration)\Microsoft.PowerShell.EditorServices.Host.x86.exe.config"
+      "$(TargetFrameworkSDKToolsDirectory)\corflags.exe" "$(ProjectDir)bin\$(Configuration)\Microsoft.PowerShell.EditorServices.Host.x86.exe" /32BIT+ /Force
+    </PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
