Introduce new editor extensibility API
This change introduces a new PowerShell-based API that allows scripts and
modules to extend the behavior of the host editor.  Scripts can either
automate the editor directly or register commands that can later be
invoked by the user.  The ExtensionService provides this behavior for any
PowerShellContext by injecting a new variable '$psEditor' into the
session.

This version of the API is very early and will be expanded upon in future
releases.

--- a/test/PowerShellEditorServices.Test/PowerShellEditorServices.Test.csproj
+++ b/test/PowerShellEditorServices.Test/PowerShellEditorServices.Test.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Console\InputPromptHandlerTests.cs" />
+    <Compile Include="Extensions\ExtensionServiceTests.cs" />
     <Compile Include="Session\PowerShellContextTests.cs" />
     <Compile Include="Debugging\DebugServiceTests.cs" />
     <Compile Include="Language\LanguageServiceTests.cs" />
