Update appveyor.yml to change build settings

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,6 +2,7 @@ version: '$(core_version).{build}'
 os: WMF 5
 configuration: Release
 clone_depth: 10
+skip_tags: true
 
 environment:
   core_version: '0.7.0'
@@ -10,6 +11,7 @@ environment:
 branches:
   only:
   - master
+  - develop
 
 # NOTE: If you need to debug a problem with the AppVeyor build, uncomment the
 #       following two lines and push them to your PR branch.  Once the next
